Bug 444222 - Latte doesn't work. Can't interact with it. Just autohides
Summary: Latte doesn't work. Can't interact with it. Just autohides
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: 0.10.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
: 406580 429140 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-10-22 05:36 UTC by Kalzi
Modified: 2021-10-26 01:15 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.10.3
Sentry Crash Report:


Attachments
Video shows the dock (3.38 MB, video/x-matroska)
2021-10-22 16:22 UTC, Kalzi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kalzi 2021-10-22 05:36:59 UTC
SUMMARY
The dock just never works. Tried it on kde neon and endeavour OS and it is doing the same thing. After installation, I'd launch it, then it launches for a couple of seconds then disappears as if it were set to "autohid" and I can never bring it back up. It would only pop up again when I open another application, again, for a couple of seconds, then hides again. If I try to catch it before it hides with a right click, the menu that shows up is just a regular desktop right click. I can never interact with the dock.
STEPS TO REPRODUCE
1. Just download it and run it.

OBSERVED RESULT
Can't interact with the dock at all.

EXPECTED RESULT
A dock that works and stays on the screen unless it is set to autohide. Also, a dock that can be interacted with.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.23.1
KDE Frameworks Version: 5.87
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Comment 1 Kalzi 2021-10-22 16:22:13 UTC
Created attachment 142763 [details]
Video shows the dock

This shows how I can't do anything with the dock. Also, this is Manjaro, the third distro I've tried
Comment 2 Kalzi 2021-10-22 16:24:44 UTC
I have now tried it on a third distro, Manjaro, that is still running kde plasma 5.22.5. It is still doing the same exact thing. Brand new install. Also, attached a video showing the bug.
Comment 3 Michail Vourlakos 2021-10-22 17:25:48 UTC
no idea how you fall into this situation, is that a Plasma Desktop ?
Comment 4 Kalzi 2021-10-22 17:41:22 UTC
(In reply to Michail Vourlakos from comment #3)
> no idea how you fall into this situation, is that a Plasma Desktop ?

Yes, that is. All three distros are plasma. Manjaro being a version earlier 5.22.5. There is another user on reddit who confirmed they have the same issue. I've encouraged them to confirm here, too.
Comment 5 Mathias C. 2021-10-23 17:38:55 UTC
Hi all,
I have the exact same issue since I updated to Latte 0.10.*. These are the details of my system:

Disto: Archlinux
KDE Plasma Desktop: 5.22.* and 5.23.*
KDE Frameworks Version: 5.87
Qt Version: 5.15.2

I already deleted any folder relative to latte-dock configuration and nothing solved.
Comment 6 Kalzi 2021-10-23 18:05:12 UTC
(In reply to Mathias C. from comment #5)
> Hi all,
> I have the exact same issue since I updated to Latte 0.10.*. These are the
> details of my system:
> 
> Disto: Archlinux
> KDE Plasma Desktop: 5.22.* and 5.23.*
> KDE Frameworks Version: 5.87
> Qt Version: 5.15.2
> 
> I already deleted any folder relative to latte-dock configuration and
> nothing solved.

Thanks for confirming.
Comment 7 Mathias C. 2021-10-23 21:57:01 UTC
I just found how to "fix" it on my system.

1. Open a terminal and run 'unset PLASMA_USE_QT_SCALING'
2. Run 'latte-dock' in the same terminal

I have an hidpi screen and I need that variable to have Plasma following the dpi scaling of the system on X11.
Comment 8 Kalzi 2021-10-23 23:38:09 UTC
(In reply to Mathias C. from comment #7)
> I just found how to "fix" it on my system.
> 
> 1. Open a terminal and run 'unset PLASMA_USE_QT_SCALING'
> 2. Run 'latte-dock' in the same terminal
> 
> I have an hidpi screen and I need that variable to have Plasma following the
> dpi scaling of the system on X11.

Oh shoot! I have that enabled. But I need that line to make the UI look normal. I have a 4k screen, too, and removing that line makes things look out of place :/
Comment 9 Mathias C. 2021-10-24 09:22:22 UTC
Same system, but different user created just to test latte-dock and the dock works. Even though the other user also have the PLASMA_USE_QT_SCALING variable set to 1.
So my guess is that a combination of variables does not allow the dock to work when PLASMA_USE_QT_SCALING is set.
Comment 10 Mathias C. 2021-10-24 10:27:49 UTC
Investigating this further, I manage to replicate the issue on the second user. The problem is the variable QT_SCREEN_SCALE_FACTORS. If you set any global scaling in the Plasma settings, that variable get set and latte-dock stops working.
Moreover, more specifically, what does not work is the bottom dock. I created a layout with a top panel and a bottom dock, and only the latte results unresponsive.
Comment 11 Mathias C. 2021-10-24 10:32:12 UTC
(In reply to Mathias C. from comment #10)
> Investigating this further, I manage to replicate the issue on the second
> user. The problem is the variable QT_SCREEN_SCALE_FACTORS. If you set any
> global scaling in the Plasma settings, that variable get set and latte-dock
> stops working.
> Moreover, more specifically, what does not work is the bottom dock. I
> created a layout with a top panel and a bottom dock, and only the latte
> results unresponsive.

*only the latter results unresponsive
Comment 12 Michail Vourlakos 2021-10-24 10:38:36 UTC
as a comment Plasma does not offer an official way for per-screen scaling under X11 and the use of PLASMA_USE_QT_SCALING is not suggested at all from plasma devs.

Based on that I really I am not that keen to deep into this and this requires something that having such setup that breaks and starts getting into what is not working and why.

My guess is that the issue is from Latte internal wm tracking, if you set for Bottom Dock an alternative visibility mode that does not require window tracking such WindowsCanCover then the issue might not be present.
Comment 13 Mathias C. 2021-10-24 10:47:27 UTC
This is not really a "per-screen" scaling problem. The issue is present even when I use the single display on my laptop.

And yes, I also tried to create a layout with a "always visible" bottom dock, and the problem remains: the dock is completely unresponsive although it stays visible.

Also, latte-dock worked perfectly until the update to 0.10, so I would not say it's plasma related, but rather a potential regression in latte.
Comment 14 Michail Vourlakos 2021-10-24 10:50:00 UTC
(In reply to Mathias C. from comment #13)
> This is not really a "per-screen" scaling problem. The issue is present even
> when I use the single display on my laptop.
> 
> And yes, I also tried to create a layout with a "always visible" bottom
> dock, and the problem remains: the dock is completely unresponsive although
> it stays visible.
> 
> Also, latte-dock worked perfectly until the update to 0.10, so I would not
> say it's plasma related, but rather a potential regression in latte.

If I am able to reproduce this in my single screen system I will take a look then.

Send me the exact steps to setup my screen settings to reproduce the issue please.
Comment 15 Mathias C. 2021-10-24 10:58:41 UTC
(In reply to Michail Vourlakos from comment #14)
> (In reply to Mathias C. from comment #13)
> > This is not really a "per-screen" scaling problem. The issue is present even
> > when I use the single display on my laptop.
> > 
> > And yes, I also tried to create a layout with a "always visible" bottom
> > dock, and the problem remains: the dock is completely unresponsive although
> > it stays visible.
> > 
> > Also, latte-dock worked perfectly until the update to 0.10, so I would not
> > say it's plasma related, but rather a potential regression in latte.
> 
> If I am able to reproduce this in my single screen system I will take a look
> then.
> 
> Send me the exact steps to setup my screen settings to reproduce the issue
> please.

Thank you very much!!

Basically, just set a global scaling in the display settings (I tried both 200% and 175% as I have a hidpi panel).
That means Plasma is going to set the variable QT_SCREEN_SCALE_FACTORS, which in junction with PLASMA_USE_QT_SCALING (necessary for the Plasma menus to respect the scaling) makes the bottom dock unresponsive to any click.
Comment 16 Michail Vourlakos 2021-10-24 11:01:29 UTC
(In reply to Mathias C. from comment #15)
> (In reply to Michail Vourlakos from comment #14)
> > (In reply to Mathias C. from comment #13)
> > > This is not really a "per-screen" scaling problem. The issue is present even
> > > when I use the single display on my laptop.
> > > 
> > > And yes, I also tried to create a layout with a "always visible" bottom
> > > dock, and the problem remains: the dock is completely unresponsive although
> > > it stays visible.
> > > 
> > > Also, latte-dock worked perfectly until the update to 0.10, so I would not
> > > say it's plasma related, but rather a potential regression in latte.
> > 
> > If I am able to reproduce this in my single screen system I will take a look
> > then.
> > 
> > Send me the exact steps to setup my screen settings to reproduce the issue
> > please.
> 
> Thank you very much!!
> 
> Basically, just set a global scaling in the display settings (I tried both
> 200% and 175% as I have a hidpi panel).
> That means Plasma is going to set the variable QT_SCREEN_SCALE_FACTORS,
> which in junction with PLASMA_USE_QT_SCALING (necessary for the Plasma menus
> to respect the scaling) makes the bottom dock unresponsive to any click.

no no, I mean exact steps for everything:
1. I just have to set Plasma Scaling from plasma systemsetttings to 175% ?

dont I have to setup PLASMA_USE_QT_SCALING somehow etc. etc. ?
Comment 17 Kalzi 2021-10-24 11:05:25 UTC
(In reply to Mathias C. from comment #10)
> Investigating this further, I manage to replicate the issue on the second
> user. The problem is the variable QT_SCREEN_SCALE_FACTORS. If you set any
> global scaling in the Plasma settings, that variable get set and latte-dock
> stops working.
> Moreover, more specifically, what does not work is the bottom dock. I
> created a layout with a top panel and a bottom dock, and only the latte
> results unresponsive.

I can confirm that. I've managed to put a latte dock to the side and it was responsive. I couldn't put one up or right (because honestly the settings menu that I managed to get on latte is kind of confusing). It's only the bottom one that is not responsive. I only have PLASMA_USE_QT_SCALING enabled, I've never seen nor used the QT_SCREEN_SCALE_FACTORS. Unless, it gets set automatically when changing the scaling in the settings to 200, which is something I've always had to do because of the 4k screen and never had an issue with latte dock even on 0.10. It seems like the issue started happening after the incremental updates of 0.10+
Comment 18 Kalzi 2021-10-24 11:08:15 UTC
(In reply to Michail Vourlakos from comment #16)
> (In reply to Mathias C. from comment #15)
> > (In reply to Michail Vourlakos from comment #14)
> > > (In reply to Mathias C. from comment #13)
> > > > This is not really a "per-screen" scaling problem. The issue is present even
> > > > when I use the single display on my laptop.
> > > > 
> > > > And yes, I also tried to create a layout with a "always visible" bottom
> > > > dock, and the problem remains: the dock is completely unresponsive although
> > > > it stays visible.
> > > > 
> > > > Also, latte-dock worked perfectly until the update to 0.10, so I would not
> > > > say it's plasma related, but rather a potential regression in latte.
> > > 
> > > If I am able to reproduce this in my single screen system I will take a look
> > > then.
> > > 
> > > Send me the exact steps to setup my screen settings to reproduce the issue
> > > please.
> > 
> > Thank you very much!!
> > 
> > Basically, just set a global scaling in the display settings (I tried both
> > 200% and 175% as I have a hidpi panel).
> > That means Plasma is going to set the variable QT_SCREEN_SCALE_FACTORS,
> > which in junction with PLASMA_USE_QT_SCALING (necessary for the Plasma menus
> > to respect the scaling) makes the bottom dock unresponsive to any click.
> 
> no no, I mean exact steps for everything:
> 1. I just have to set Plasma Scaling from plasma systemsetttings to 175% ?
> 
> dont I have to setup PLASMA_USE_QT_SCALING somehow etc. etc. ?

Set the scale to 200 or 175 in the settings, add PLASMA_USE_QT_SCALING to .bash_profile, .profile or /etc/environment log out and log in. Install latte and try it.
Comment 19 Michail Vourlakos 2021-10-24 13:36:45 UTC
Git commit b839283d5b164e0309e09bec9295f42ff230341e by Michail Vourlakos.
Committed on 24/10/2021 at 13:31.
Pushed by mvourlakos into branch 'v0.10'.

support X11::GlobalScaling properly

--as it appears many users are using Plasma GlobalScaling
in conjuction with PLASMA_USE_QT_SCALING. This commit
provides plenty of fixes for that scenario in order to
make things workable.
--adjust X11::InputMask based on devicePixelRatio()
--adjust X11::GtkFrameExtents based on devicePixelRatio()
--adjust View::absoluteGeometry() based on devicePixelRatio()
--adjust WM::Tracker based on devicePixelRatio()
--adjust WM::AbstractInterface based on devicePixelRatio()
FIXED-IN:0.10.3

M  +9    -0    app/view/effects.cpp
M  +9    -0    app/view/view.cpp
M  +5    -0    app/view/visibilitymanager.cpp
M  +41   -6    app/wm/abstractwindowinterface.cpp
M  +37   -3    app/wm/tracker/windowstracker.cpp

https://invent.kde.org/plasma/latte-dock/commit/b839283d5b164e0309e09bec9295f42ff230341e
Comment 20 Michail Vourlakos 2021-10-24 13:37:13 UTC
Git commit 61d4ff64d8fc76ede13b9bc43cc3e678882e0ae0 by Michail Vourlakos.
Committed on 24/10/2021 at 13:37.
Pushed by mvourlakos into branch 'master'.

support X11::GlobalScaling properly

--as it appears many users are using Plasma GlobalScaling
in conjuction with PLASMA_USE_QT_SCALING. This commit
provides plenty of fixes for that scenario in order to
make things workable.
--adjust X11::InputMask based on devicePixelRatio()
--adjust X11::GtkFrameExtents based on devicePixelRatio()
--adjust View::absoluteGeometry() based on devicePixelRatio()
--adjust WM::Tracker based on devicePixelRatio()
--adjust WM::AbstractInterface based on devicePixelRatio()
FIXED-IN:0.10.3

M  +9    -0    app/view/effects.cpp
M  +9    -0    app/view/view.cpp
M  +5    -0    app/view/visibilitymanager.cpp
M  +41   -6    app/wm/abstractwindowinterface.cpp
M  +37   -3    app/wm/tracker/windowstracker.cpp

https://invent.kde.org/plasma/latte-dock/commit/61d4ff64d8fc76ede13b9bc43cc3e678882e0ae0
Comment 21 Michail Vourlakos 2021-10-24 13:40:14 UTC
*** Bug 429140 has been marked as a duplicate of this bug. ***
Comment 22 Michail Vourlakos 2021-10-24 13:41:11 UTC
*** Bug 406580 has been marked as a duplicate of this bug. ***
Comment 23 Michail Vourlakos 2021-10-24 13:42:56 UTC
Can someone test the provided solution? because v0.10.3 is going to be released the next days and it is going to include these fixes.
Comment 24 Kalzi 2021-10-24 17:55:24 UTC
(In reply to Michail Vourlakos from comment #23)
> Can someone test the provided solution? because v0.10.3 is going to be
> released the next days and it is going to include these fixes.

I will test. I'm on manjaro, if that matters.
Just let me know when, and I'll do it.
Comment 25 Michail Vourlakos 2021-10-24 19:33:02 UTC
(In reply to Kalzi from comment #24)
> (In reply to Michail Vourlakos from comment #23)
> > Can someone test the provided solution? because v0.10.3 is going to be
> > released the next days and it is going to include these fixes.
> 
> I will test. I'm on manjaro, if that matters.
> Just let me know when, and I'll do it.

The patches are already merged, I would just want someone to test them before I release 0.10.3
Comment 26 Kalzi 2021-10-24 23:13:44 UTC
(In reply to Michail Vourlakos from comment #23)
> Can someone test the provided solution? because v0.10.3 is going to be
> released the next days and it is going to include these fixes.

I will test. I'm on manjaro, if that matters.
Just let me know when, and I'll do it. (In reply to Michail Vourlakos from comment #25)
> (In reply to Kalzi from comment #24)
> > (In reply to Michail Vourlakos from comment #23)
> > > Can someone test the provided solution? because v0.10.3 is going to be
> > > released the next days and it is going to include these fixes.
> > 
> > I will test. I'm on manjaro, if that matters.
> > Just let me know when, and I'll do it.
> 
> The patches are already merged, I would just want someone to test them
> before I release 0.10.3

I'll test it when I get home. Could you provide a link, please. And is it just a matter of a get clone then install? Or how do I go about it?
Comment 27 Mathias C. 2021-10-25 09:18:45 UTC
Testing it now!!
Comment 28 Mathias C. 2021-10-25 12:57:40 UTC
The dock now works perfectly. Thank you very much!!

This has been a great experience of bug reporting and fixing!! Thank you for the great work!!
Comment 29 Michail Vourlakos 2021-10-25 13:30:47 UTC
(In reply to Mathias C. from comment #28)
> The dock now works perfectly. Thank you very much!!
> 
> This has been a great experience of bug reporting and fixing!! Thank you for
> the great work!!

Nice! and now we can have a 0.10.3 release! :)
Comment 30 Kalzi 2021-10-26 01:06:45 UTC
(In reply to Mathias C. from comment #28)
> The dock now works perfectly. Thank you very much!!
> 
> This has been a great experience of bug reporting and fixing!! Thank you for
> the great work!!

I don't know if this comment is directed at me, the developer or both, but I love KDE and I am determined to help make it the best possible. :)
Comment 31 Kalzi 2021-10-26 01:08:15 UTC
(In reply to Michail Vourlakos from comment #29)
> (In reply to Mathias C. from comment #28)
> > The dock now works perfectly. Thank you very much!!
> > 
> > This has been a great experience of bug reporting and fixing!! Thank you for
> > the great work!!
> 
> Nice! and now we can have a 0.10.3 release! :)

Thank you so much for your hard work. Have you pushed it to the AUR yet? Or is it something you don't do, and the AUR community does. Because I still don't have the update there.
Comment 32 Kalzi 2021-10-26 01:14:45 UTC
Never, it is not availble on manjaro for some reason, even though i searched the AUR through pamac GUI. I had to download the file from the actual aur webiste. It is working now. Thank you so much
Comment 33 Kalzi 2021-10-26 01:15:32 UTC
nevermind*. there really needs to be "edit comment" on this site. lol